--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Tharun1407.github.io/my-app",
+  "homepage": "http://Tharun1407.github.io/Portfolio/",
   "dependencies": {
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.2",
